--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ safety = "^1.8.5"
 mypy = "^0.761"
 flake8-annotations = "^1.1.3"
 typeguard = "^2.7.1"
+flake8-docstrings = "^1.5.0"
+darglint = "^1.1.2"
+xdoctest = "^0.11.0"
+sphinx = "^2.3.1"
+sphinx-autodoc-typehints = "^1.10.3"
 
 [tool.poetry.scripts]
 hypermodern-python = "hypermodern_python.console:main"
